logs/dag_id=test_customers/run_id=manual__2023-11-09T195000.884128+0000/task_id=create_customers_table/attempt=1.log
[2023-11-09T19:50:04.634+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: test_customers.create_customers_table manual__2023-11-09T19:50:00.884128+00:00 [queued]>
[2023-11-09T19:50:04.650+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: test_customers.create_customers_table manual__2023-11-09T19:50:00.884128+00:00 [queued]>
[2023-11-09T19:50:04.651+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-11-09T19:50:04.652+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 1
[2023-11-09T19:50:04.653+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-11-09T19:50:04.675+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_customers_table> on 2023-11-09 19:50:00.884128+00:00
[2023-11-09T19:50:04.682+0000] {standard_task_runner.py:55} INFO - Started process 585 to run task
[2023-11-09T19:50:04.687+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_customers', 'create_customers_table', 'manual__2023-11-09T19:50:00.884128+00:00', '--job-id', '264', '--raw', '--subdir', 'DAGS_FOLDER/test_customer.py', '--cfg-path', '/tmp/tmphqchxz4j']
[2023-11-09T19:50:04.689+0000] {standard_task_runner.py:83} INFO - Job 264: Subtask create_customers_table
[2023-11-09T19:50:04.795+0000] {task_command.py:389} INFO - Running <TaskInstance: test_customers.create_customers_table manual__2023-11-09T19:50:00.884128+00:00 [running]> on host 706d03b983c6
[2023-11-09T19:50:05.175+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Tetiana
AIRFLOW_CTX_DAG_ID=test_customers
AIRFLOW_CTX_TASK_ID=create_customers_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-09T19:50:00.884128+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-09T19:50:00.884128+00:00
[2023-11-09T19:50:05.178+0000] {sql.py:253} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS customers (
            Index INT NOT NULL primary key,
            Customer_Id varchar(100),
            First_Name varchar(100),
            Last_Name varchar(100),
            
        );
    
[2023-11-09T19:50:05.192+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-11-09T19:50:05.622+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-11-09T19:50:05.630+0000] {sql.py:364} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS customers (
            Index INT NOT NULL primary key,
            Customer_Id varchar(100),
            First_Name varchar(100),
            Last_Name varchar(100),
            
        );
    , parameters: None
[2023-11-09T19:50:05.633+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:         );
                ^

[2023-11-09T19:50:05.645+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=test_customers, task_id=create_customers_table, execution_date=20231109T195000, start_date=20231109T195004, end_date=20231109T195005
[2023-11-09T19:50:05.676+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 264 for task create_customers_table (syntax error at or near ")"
LINE 8:         );
                ^
; 585)
[2023-11-09T19:50:05.729+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-11-09T19:50:05.767+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
